<resources>
    <string name="app_name">Космические пейзажи</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="chip_yesterday">Вчера</string>
    <string name="chip_today">Сегодня</string>
    <string name="chip_before_yesterday">Позавчера</string>
    <string name="settings">Настройки</string>
    <string name="rover">Марсоход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Пустой фрагмент</string>
    <string name="settings__text_view_theme">Тема:</string>
    <string name="settings_chip_name_standart">Стандратная</string>
    <string name="settings_chip_name_miracle">Синяя</string>
    <string name="bootom_sheet_head_text">Заголовок</string>
    <string name="bootom_sheet_body_text">Основной текст</string>
    <string name="front_cam">Передняя камера</string>
    <string name="real_cam">Задняя камера</string>
    <string name="panoramic_cam">Панорамная камера</string>
    <string name="show_details_text">Показать описание</string>
    <string name="notes">Заметки</string>
    <string name="note">Заметка №</string>
</resources>
