<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            app:layoutDescription="@xml/motion_scene">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:chipSpacingHorizontal="50dp"
                app:layout_constraintBottom_toTopOf="@id/image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    style="@style/ChipsDayNightTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/chip_today"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipYesterday"
                    style="@style/ChipsDayNightTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_yesterday"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBeforeYesterday"
                    style="@style/ChipsDayNightTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_before_yesterday"
                    android:textAlignment="center" />
            </com.google.android.material.chip.ChipGroup>


            <!--
                       <com.google.android.material.tabs.TabLayout
                           android:id="@+id/tabGroup"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           app:layout_constraintBottom_toTopOf="@id/image_view"
                           app:layout_constraintEnd_toEndOf="parent"
                           app:layout_constraintStart_toStartOf="parent">

                           <com.google.android.material.tabs.TabItem
                               android:id="@+id/tabToday"
                               style="@style/ChipsDayNightTextColor"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:checked="true"
                               android:text="@string/chip_today"
                               android:textAlignment="center" />

                           <com.google.android.material.tabs.TabItem
                               android:id="@+id/tabYesterday"
                               style="@style/ChipsDayNightTextColor"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/chip_yesterday"
                               android:textAlignment="center" />

                           <com.google.android.material.tabs.TabItem
                               android:id="@+id/tabBeforeYesterday"
                               style="@style/ChipsDayNightTextColor"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/chip_before_yesterday"
                               android:textAlignment="center" />
                       </com.google.android.material.tabs.TabLayout>
                       -->

            <space.picture.marslandscapes.util.EquilateralImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/photo_of_the_day_stub"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_no_photo_vector" />

            <ImageView
                android:id="@+id/btnWiki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="14dp"
                android:src="@drawable/ic_wikipedia"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/WikiStyle"
                android:layout_width="@dimen/picture_fragment_text_input_width"
                android:layout_height="wrap_content"
                android:hint="@string/search_wiki"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/include_layout"
        layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="?colorPrimary"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:maxImageSize="@dimen/fab_size"
    android:backgroundTint="@color/colorAccent"
    app:layout_anchor="@id/bottom_app_bar"
    app:srcCompat="@drawable/ic_plus_fab"
    app:tint="#FFFFFF" />
    -->


    <FrameLayout
        android:id="@+id/picture_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone"
        tools:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
